--- a/src/style/components/madlib_form.scss
+++ b/src/style/components/madlib_form.scss
@@ -43,17 +43,35 @@ input {
     color: white;
 }
 
+@mixin buttonStyles {
+    height: 50px;
+    width: 300px;
+    border-radius: 4px;
+    color: white !important;
+    font-size: 1.25em;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
+    margin-top: 42px;
+}
+
 .generate-button {
-height: 50px;
-width: 300px;
-border-radius: 4px;
-background-color: $bottegaGreen;
-color: white;
-font-size: 1.25em;
+    background-color: $bottegaGreen;
+    @include buttonStyles;
 }
 
 .button-wrapper {
-display: flex;
-flex-direction: column;
-align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.clear-button, a {
+    @include buttonStyles;
+    background-color: $clearBlue;
+    padding-top: 9px;
+    text-align: center;
+}
+
+input:focus,
+button:focus {
+    outline: none;
 }
