added syles to the rest of the app, located an error that was not allowing mixins to import, hide the content and made final touchs.

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,11 +1,12 @@
-@import 'variables';
-@import 'components/madlib_form';
-@import 'heading';
 
+@import 'variables';
+@import 'mixins';
+
+@import 'header';
+
+@import 'components/madlib_form';
+@import 'components/madlib_content';
 
 body {
-    font-family: $font-primary;
+    font-family: $font-primary;    
 }
-
-
-
