--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,5 +1,5 @@
-$bottegaGreen: #00cb79;
-$clearBlue: #45b0e5;
-$mainGray: #cfcfcf;
+$bottegaGreen:#00CB79;
+$clearBlue: #45B0E5;
+$mainGray: #CFCFCF;
 $darkGray: #444444;
 $font-primary: 'Montserrat', sans-serif;
